--- a/WEBAPP.html
+++ b/WEBAPP.html
@@ -7,13 +7,13 @@
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script>
         // Ініціалізація WebApp
-        Telegram.WebApp.ready();
+        tg.ready();
 
         function sendDonation(amount) {
             const donationData = { amount };
             if (window.Telegram.WebApp) {
-                Telegram.WebApp.sendData(JSON.stringify(donationData));
-                Telegram.WebApp.close();
+                tg.sendData(JSON.stringify(donationData));
+                tg.close();
             } else {
                 alert(Ви обрали донат на суму ${amount}₴);
             }
@@ -22,7 +22,8 @@
         window.onload = function () {
             // Додаємо слухачі на кнопки для всіх варіантів
             document.getElementById('donate5').addEventListener('click', function () {
-                sendData(5); // Відправляємо 5 гривень
+                sendData(5);
+                tg.close() // Відправляємо 5 гривень
             });
 
             document.getElementById('donate10').addEventListener('click', function () {
