--- a/WEBAPP.html
+++ b/WEBAPP.html
@@ -7,10 +7,10 @@
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script>
         // Ініціалізація WebApp
-        tg.ready();
+        Telegram.WebApp.ready();
 
         order.addEventListener('click', () => {
-            tg.close();
+            Telegram.WebApp.close();
         })
     </script>
     <style>
