--- a/WEBAPP.html
+++ b/WEBAPP.html
@@ -95,7 +95,7 @@
     </style>
 </head>
 <body>
-    <h1>Підтриматииии автора <span class="heart">❤️</span></h1>
+    <h1>Підтримати автора <span class="heart">❤️</span></h1>
     <p>Виберіть суму для донату:</p>
     <button id="donate5">5 ₴</button>
     <button id="donate10">10 ₴</button>
