--- a/WEBAPP.html
+++ b/WEBAPP.html
@@ -13,36 +13,41 @@
 
         body {
             font-family: Arial, sans-serif;
+            background-color: #faf8ef;
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-color: #faf8ef;
-            flex-direction: column;
+            overflow: hidden;
         }
 
         #game-container {
             display: flex;
             flex-direction: column;
             align-items: center;
+            width: 90vw;
+            max-width: 400px;
         }
 
         h1 {
             font-size: 2.5rem;
             margin-bottom: 20px;
+            color: #776e65;
+            font-weight: bold;
         }
 
         #grid-container {
             display: grid;
-            grid-template-columns: repeat(4, 100px);
-            grid-template-rows: repeat(4, 100px);
+            grid-template-columns: repeat(4, 1fr);
+            grid-template-rows: repeat(4, 1fr);
             gap: 10px;
             margin-bottom: 20px;
+            width: 100%;
+            aspect-ratio: 1;
         }
 
         .cell {
-            width: 100px;
-            height: 100px;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -50,11 +55,12 @@
             font-size: 2rem;
             color: white;
             border-radius: 5px;
+            transition: background-color 0.2s, transform 0.1s;
         }
 
         button {
             padding: 10px 20px;
-            font-size: 1rem;
+            font-size: 1.2rem;
             cursor: pointer;
             background-color: #4CAF50;
             color: white;
@@ -66,6 +72,28 @@
         button:active {
             background-color: #45a049;
         }
+
+        @media (max-width: 500px) {
+            h1 {
+                font-size: 2rem;
+            }
+
+            .cell {
+                font-size: 1.5rem;
+            }
+
+            button {
+                font-size: 1rem;
+            }
+        }
+
+        #win-message {
+            font-size: 2rem;
+            color: #f39c12;
+            font-weight: bold;
+            display: none;
+            margin-top: 20px;
+        }
     </style>
 </head>
 <body>
@@ -73,11 +101,13 @@
         <h1>2048</h1>
         <div id="grid-container"></div>
         <button id="reset-button">Reset Game</button>
+        <div id="win-message">You Win!</div>
     </div>
 
     <script>
         const gridContainer = document.getElementById('grid-container');
         const resetButton = document.getElementById('reset-button');
+        const winMessage = document.getElementById('win-message');
 
         let board = [
             [0, 0, 0, 0],
@@ -95,6 +125,7 @@
             addRandomTile();
             addRandomTile();
             updateGrid();
+            winMessage.style.display = 'none'; // Hide win message
         }
 
         function updateGrid() {
@@ -146,7 +177,10 @@
             }
         }
 
-        resetButton.addEventListener('click', initializeGame);
+        function moveUp() { /* Implement movement logic for "Up" */ }
+        function moveDown() { /* Implement movement logic for "Down" */ }
+        function moveLeft() { /* Implement movement logic for "Left" */ }
+        function moveRight() { /* Implement movement logic for "Right" */ }
 
         document.addEventListener('keydown', (e) => {
             if (e.key === 'ArrowUp') moveUp();
@@ -155,20 +189,17 @@
             if (e.key === 'ArrowRight') moveRight();
         });
 
-        function moveUp() {
-            // Implement moveUp logic
-        }
+        resetButton.addEventListener('click', initializeGame);
 
-        function moveDown() {
-            // Implement moveDown logic
-        }
-
-        function moveLeft() {
-            // Implement moveLeft logic
-        }
-
-        function moveRight() {
-            // Implement moveRight logic
+        function checkWin() {
+            for (let row = 0; row < 4; row++) {
+                for (let col = 0; col < 4; col++) {
+                    if (board[row][col] === 2048) {
+                        winMessage.style.display = 'block';
+                        return;
+                    }
+                }
+            }
         }
 
         initializeGame();
